# game-of-life-cpp

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  install.sh
include/: Camera.h
src/: Camera.cpp  Main.cpp
